# CNN

./: README.md  get_data.py  main.py  pyproject.toml
model/: __init__.py  model.py
