[tool.poetry]
name = "cnn"
version = "0.1.0"
description = ""
authors = ["kou1218 <koudai141218@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.2.0+cu118", source = "torch_cu118"}
torchvision = {version = "^0.17.0+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.2.0+cu118", source = "torch_cu118"}
matplotlib = "^3.8.2"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
